Fix incorrect StatCard title alignment
When a StatCard displays an ability, the title is incorrectly positioned
vertically at the bottom of the StatCard. After this change, it is
aligned near the top.

Fixes #987

--- a/app/styles/analyzer.css
+++ b/app/styles/analyzer.css
@@ -121,6 +121,7 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: var(--s-2);
+  margin-bottom: auto;
   gap: var(--s-1);
 }
 
